--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gatsby": "^2.18.4",
     "gatsby-plugin-create-client-paths": "^2.1.17",
     "gatsby-plugin-favicon": "^3.1.6",
-    "gatsby-plugin-firebase": "^0.1.5",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-postcss": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "prop-types": "^15.6.1",
